# fapio

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env  .env.sample  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e2c19c7a2892_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  models.py  repositories.py
backend/app/core/db/: __init__.py  base.py  db.py  engine.py  session.py  transaction.py
backend/app/expeditions/: api.py  optimization.py  schemas.py
backend/app/farmer/: api.py  models.py  repositories.py  schemas.py
backend/app/pets/: constants.py
backend/certificates/: localhost.lvieira.com-key.pem  localhost.lvieira.com.pem
fixtures/: pet_combos.json  pets.json
frontend/: .env  .env.sample  .eslintrc.cjs  .prettierrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  Theme.ts  main.tsx
frontend/src/components/: NavBar.tsx  UploadSaveFileButton.tsx
frontend/src/components/mains/: EmptyMain.tsx  ExpeditionOptimizerMain.tsx
frontend/src/components/pages/: FarmerLoadingPage.tsx  MissingFarmerPage.tsx
frontend/src/types/: expeditions.ts  farmer.ts
frontend/src/utils/: expeditions.ts  farmer.ts
prisma/: schema.prisma
public/pets/: pets.json
src/env/: schema.mjs
src/fixtures/: fapi-save.txt  pets.json  save_sample.json
src/hooks/: farmer.tsx  pets.tsx
src/pages/: _app.tsx  expedition.tsx  fapio.tsx  index.tsx
src/pages/api/auth/: [...nextauth].ts
src/pages/components/: NavBar.tsx  SignOutButton.tsx  UploadSaveButton.tsx
src/pages/hooks/: farmer.tsx
src/pages/pets/: PetCard.tsx  PetGrid.tsx  expeditionOptimization.ts  index.tsx
src/pages/save/: index.tsx
src/scripts/: pet_damage.py
src/server/api/: root.ts
src/server/api/routers/: farmer.ts
src/styles/: globals.css
src/types/: pets.ts
src/utils/: expeditionOptimization.ts
