[tool.poetry]
name = "fapio"
version = "1.0.0"
description = "Farmer Against Potatoes Idle Optimizer"
authors = ["Luis Vieira <lvieira@lvieira.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = {version = "~3.10.10"}
fastapi = {version = "^0.89.1", python = "~3.10"}
uvicorn = {version = "^0.20.0", python = "~3.10", extras = ["standard"]}
gunicorn = {version = "^20.1.0", python = "~3.10"}
sqlalchemy = {version = "^1.4.46", python = "~3.10"}
alembic = {version = "^1.9.2", python = "~3.10"}
psycopg2-binary = {version = "^2.9.5", python = "~3.10"}
python-multipart = {version = "^0.0.5", python = "~3.10"}
loguru = {version = "^0.6.0", python = "~3.10"}
ipython = {version = "^8.9.0", python = "~3.10"}


[tool.poetry.dev-dependencies]
ipdb = {version = "^0.13.11", python = "~3.10"}
safety = {version = "^2.3.5", python = "~3.10"}
mypy = {version = "^0.991", python = "~3.10"}
black = {version = "^22.12.0", python = "~3.10"}
ruff = {version = "^0.0.236", python = "~3.10"}
pytest = {version = "^7.2.1", python = "~3.10"}
pytest-cov = {version = "^4.0.0", python = "~3.10"}
pytest-mock = {version = "^3.10.0", python = "~3.10"}
mock = {version = "^5.0.1", python = "~3.10"}
scalene = {version = "^1.5.20", python = "~3.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
